CRU de ônibus urbano e intermunicipal

--- a/application/views/scripts/onibus-intermunicipal/editar.phtml
+++ b/application/views/scripts/onibus-intermunicipal/editar.phtml
@@ -23,65 +23,65 @@
                 <div class="row">
                     <div class="col">
                         <label>Placa</label>
-                        <input type="text" class="form-control" name="placa" id="placa">
+                        <input type="text" class="form-control" name="placa" id="placa" value="<? echo $this->onibusIntermunicipal->getPlaca() ?>">
                     </div>
                     <div class="col">
                         <label>Ano</label>
-                        <input type="text" class="form-control" name="ano" id="ano">
+                        <input type="text" class="form-control" name="ano" id="ano" value="<? echo $this->onibusIntermunicipal->getAno() ?>">
                     </div>
                     <div class="col">
                         <label>Km</label>
-                        <input type="text" class="form-control" name="km" id="km">
+                        <input type="text" class="form-control" name="km" id="km" value="<? echo $this->onibusIntermunicipal->getKm() ?>">
                     </div>
                     <div class="col">
                         <label>Nº Assentos</label>
-                        <input type="text" class="form-control" name="numero_assentos" id="numero_assentos">
+                        <input type="text" class="form-control" name="numero_assentos" id="numero_assentos" value="<? echo $this->onibusIntermunicipal->getNumero_Assentos() ?>">
                     </div>
                     <div class="col">
                         <label>Nº Passageiros</label>
-                        <input type="text" class="form-control" name="numero_passageiros" id="numero_passageiros">
+                        <input type="text" class="form-control" name="numero_passageiros" id="numero_passageiros" value="<? echo $this->onibusIntermunicipal->getNumero_Passageiros() ?>">
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col">
                         <label>Chassi</label>
-                        <input type="text" class="form-control" name="chassi" id="chassi">
+                        <input type="text" class="form-control" name="chassi" id="chassi" value="<? echo $this->onibusIntermunicipal->getChassi() ?>">
                     </div>
                     <div class="col">
                         <label>Marca</label>
-                        <input type="text" class="form-control" name="marca" id="marca">
+                        <input type="text" class="form-control" name="marca" id="marca" value="<? echo $this->onibusIntermunicipal->getMarca() ?>">
                     </div>
                     <div class="col">
                         <label>Modelo</label>
-                        <input type="text" class="form-control" name="modelo" id="modelo">
+                        <input type="text" class="form-control" name="modelo" id="modelo" value="<? echo $this->onibusIntermunicipal->getMarca() ?>">
                     </div>
                     <div class="col">
                         <label>Nº Andares</label>
-                        <input type="text" class="form-control" name="andares" id="andares">
+                        <input type="text" class="form-control" name="andares" id="andares" value="<? echo $this->onibusIntermunicipal->getNumero_Andares() ?>">
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col">
                         <label>Ar-cond.</label>
-                        <input type="text" class="form-control" name="arcondicionado" id="arcondicionado">
+                        <input type="text" class="form-control" name="arcondicionado" id="arcondicionado" value="<? echo $this->onibusIntermunicipal->getArcondicionado() ?>">
                     </div>
                     <div class="col">
                         <label>Cor</label>
-                        <input type="text" class="form-control" name="cor" id="cor">
+                        <input type="text" class="form-control" name="cor" id="cor" value="<? echo $this->onibusIntermunicipal->getCor() ?>">
                     </div>
                     <div class="col">
                         <label>Renavam</label>
-                        <input type="text" class="form-control" name="renavam" id="renavam">
+                        <input type="text" class="form-control" name="renavam" id="renavam" value="<? echo $this->onibusIntermunicipal->getRenavam() ?>">
                     </div>
                     <div class="col">
                         <label>Banheiro</label>
-                        <input type="text" class="form-control" name="banheiro" id="banheiro">
+                        <input type="text" class="form-control" name="banheiro" id="banheiro" value="<? echo $this->onibusIntermunicipal->getBanheiro() ?>">
                     </div>
                     <div class="col">
                         <label>Situação</label>
-                        <input type="text" class="form-control" name="situacao" id="situacao">
+                        <input type="text" class="form-control" name="situacao" id="situacao" value="<? echo $this->onibusIntermunicipal->getSituacao() ?>">
                     </div>
                 </div>
                 <hr>
