--- a/application/views/scripts/onibus-urbano/editar.phtml
+++ b/application/views/scripts/onibus-urbano/editar.phtml
@@ -20,50 +20,50 @@
                     </div>
                     <div class="col">
                         <label>Ano</label>
-                        <input type="text" class="form-control" name="ano" id="ano">
+                        <input type="text" class="form-control" name="ano" id="ano" value="<? echo $this->onibusUrbano->getAno() ?>">
                     </div>
                     <div class="col">
                         <label>Situação</label>
-                        <input type="text" class="form-control" name="situacao" id="situacao">
+                        <input type="text" class="form-control" name="situacao" id="situacao" value="<? echo $this->onibusUrbano->getSituacao() ?>">
                     </div>
                     <div class="col">
                         <label>Nº Assentos</label>
-                        <input type="text" class="form-control" name="numero_assentos" id="numero_assentos">
+                        <input type="text" class="form-control" name="numero_assentos" id="numero_assentos" value="<? echo $this->onibusUrbano->getNumero_Assentos() ?>">
                     </div>
                     <div class="col">
                         <label>Nº Passageiros</label>
-                        <input type="text" class="form-control" name="numero_passageiros" id="numero_passageiros">
+                        <input type="text" class="form-control" name="numero_passageiros" id="numero_passageiros" value="<? echo $this->onibusUrbano->getNumero_Passageiros() ?>">
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col">
                         <label>Chassi</label>
-                        <input type="text" class="form-control" name="chassi" id="chassi">
+                        <input type="text" class="form-control" name="chassi" id="chassi" value="<? echo $this->onibusUrbano->getChassi() ?>">
                     </div>
                     <div class="col">
                         <label>Km</label>
-                        <input type="text" class="form-control" name="km" id="km">
+                        <input type="text" class="form-control" name="km" id="km" value="<? echo $this->onibusUrbano->getKm() ?>">
                     </div>
                     <div class="col">
                         <label>Renavam</label>
-                        <input type="text" class="form-control" name="renavam" id="renavam">
+                        <input type="text" class="form-control" name="renavam" id="renavam" value="<? echo $this->onibusUrbano->getRenavam() ?>">
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col">
                         <label>Cor</label>
-                        <input type="text" class="form-control" name="cor" id="cor">
+                        <input type="text" class="form-control" name="cor" id="cor" value="<? echo $this->onibusUrbano->getCor() ?>">
                     </div>
 
                     <div class="col">
                         <label>Marca</label>
-                        <input type="text" class="form-control" name="marca" id="marca">
+                        <input type="text" class="form-control" name="marca" id="marca" value="<? echo $this->onibusUrbano->getMarca() ?>">
                     </div>
                     <div class="col">
                         <label>Modelo</label>
-                        <input type="text" class="form-control" name="modelo" id="modelo">
+                        <input type="text" class="form-control" name="modelo" id="modelo" value="<? echo $this->onibusUrbano->getModelo() ?>">
                     </div>
                 </div>
                 <hr>
