--- a/application/views/scripts/secretario/index.phtml
+++ b/application/views/scripts/secretario/index.phtml
@@ -2,27 +2,21 @@
     <div class="row">
         <div class="col-lg-2 col-md-2 col-sm-2"></div>
             <div class="col-lg-2 col-md-2 col-sm-2">
-                <a href="<?= $this->baseUrl('/onibus-urbano/cadastrar') ?>" accesskey="c" style="text-decoration: none;">
-                    <button class="btn btn-success btn-block btn-labeled" title="(Alt+c) Cadastrar Ônibus Urbano">
+                <a href="<?= $this->baseUrl('/onibus-urbano') ?>" accesskey="c" style="text-decoration: none;">
+                    <button class="btn btn-success btn-block btn-labeled" title="(Alt+u) Ônibus Urbanos">
                         <span class="btn-label-secratario"><i class="fas fa-bus-alt"></i></span>
                         <h6>
-                            <u>C</u>adastrar
-                        </h6>
-                        <h6>
-                            Ônibus Urbano
+                            <u>U</u>rbano
                         </h6>
                     </button>
                 </a>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2">
-                <a href="<?= $this->baseUrl('onibus-intermunicipal/cadastrar') ?>" accesskey="a" style="text-decoration: none;">
-                    <button class="btn btn-success btn-block btn-labeled" title="(Alt+a) Cadastrar Ônibus Intermunicipal">
+                <a href="<?= $this->baseUrl('onibus-intermunicipal') ?>" accesskey="a" style="text-decoration: none;">
+                    <button class="btn btn-success btn-block btn-labeled" title="(Alt+i) Ônibus Intermunicipais">
                         <span class="btn-label-secratario"><i class="fas fa-bus"></i></span>
                         <h6>
-                            C<u>a</u>dastrar
-                        </h6>
-                        <h6>
-                            Ônibus Intermunic.
+                            <u>I</u>ntermunicipal
                         </h6>
                     </button>
                 </a>
