substituição: ENTRA beneficio, SAI categoriaPassageiro beneficio listando as solicitações do banco

--- a/application/layouts/scripts/layout_adminlocal.phtml
+++ b/application/layouts/scripts/layout_adminlocal.phtml
@@ -31,14 +31,14 @@
                                 <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" title="(Alt+n) Visualizar Ônibus Urbanos" href="<?= $this->baseUrl("onibus-urbano") ?>">
+                            <a class="nav-link" title="(Alt+n) Carteira Passageiro" href="<?= $this->baseUrl("beneficio") ?>">
                                 <i class="fas fa-wallet"></i>
                                 C<u>a</u>rteira Passageiro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("onibus-intermunicipal") ?>">
-                                <i></i>
-                                <u></u></a>
+                            <a class="nav-link" title="(Alt+n) Concessão de Trajeto" href="<?= $this->baseUrl("concessaotrajeto") ?>">
+                                <i class="fa fa-map-marker"></i>
+                                C<u>o</u>ncessão de Trajeto</a>
                         </li>
                     </ul>
 
