--- a/application/views/scripts/beneficio/idoso.phtml
+++ b/application/views/scripts/beneficio/idoso.phtml
@@ -9,7 +9,7 @@
 <div class="container fundo">
 
 	  <div class="table-responsive" style="background-color:rgba(0,0,0,0.5); color: white">
-							<table class="table table-bordered dataTable" style="background-color:rgba(0,0,0,0.5); color: white">
+							<table class="table table-bordered text-center" style="background-color:rgba(0,0,0,0.5); color: white">
 								<tr class="text-primary">
 									<th class="fundoTransparente" colspan="4" style="background-color:rgba(0,0,0,0.5); color: white">
 										<center><h3>Novas Solicitações de Benefícios</h3></center>
@@ -21,25 +21,19 @@
 									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"> <center>Data de Solicitação</center></th>
 									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Situação</center></th>
 								</tr>
-
-								<? foreach ($this->listarBeneficios as $beneficio): ?>
-		                        <tr>
-		                            <td> <?= $beneficio['id_solicitacao'] ?></td>		                        	
-		                            <td> <?= $beneficio['idf_pessoa'] ?></td>
-		                            <td> <?= $beneficio['data_solicitacao'] ?></td>
-		                            <td> <?= $beneficio['idf_situacao_solicitacao'] ?></td>
-		                        </tr>
-		                    	<? endforeach; ?>
-
 								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+								<? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
+			                        <tr>
+			                            <td> <?= $solicitacaobeneficio['id_solicitacao'] ?></td>		                        
+			                            <td> <?= $solicitacaobeneficio['idf_pessoa'] ?></td>
+			                            <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
+			                            <td> <?= $solicitacaobeneficio['idf_situacao_solicitacao'] ?>
+			                            	<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
 											<i class="fas fa-edit" style="color:black"></i>
 										</button>
-									</td>
+			                            </td>
+			                        </tr>
+		                    	<? endforeach; ?>
 								</tr>
 
 							</table>
@@ -50,7 +44,7 @@
     <div class="modal-dialog modal-lg" role="document">
          <div class="modal-content">
              <div class="modal-header">
-			     <h4 class="modal-title">PESSOA COM DEFICIÊNCIA</h4>
+			     <h4 class="modal-title">PESSOA IDOSA</h4>
                  <button type="button" class="close" data-dismiss="modal">
 					<span>&times;</span>
 				 </button>
@@ -63,28 +57,36 @@
 							  <div class="form-group">
 							  	<div class="col-sm-6">
 									<label >Nome completo:</label>
-									<input type="text" disabled class="form-control" name="nomeCompleto" id="nomeCompleto">
+									<input type="text" class="form-control" name="nomeCompleto" id="nomeCompleto">
 									<label >Data de nascimento:</label>
-									<input type="date" disabled class="form-control" name="dataNascimento" id="dataNascimento">
+									<input type="date" class="form-control" name="dataNascimento" id="dataNascimento">
 									<label >CPF:</label>
-									<input type="text" disabled class="form-control" name="cpf" id="cpf">
+									<input type="text" class="form-control" name="cpf" id="cpf">
 									<label >RG:</label>
-									<input type="text" disabled class="form-control" name="rg" id="rg">
+									<input type="text" class="form-control" name="rg" id="rg">
 									<label> Celular: </label>
-									<input type="text" disabled class="form-control" name="celular" id="celular">
+									<input type="text" class="form-control" name="celular" id="celular">
 								</div>
 								<div class="col-sm-6">
 									<label> Rua: </label>
-									<input type="text" disabled class="form-control" name="rua" id="rua">
+									<input type="text" class="form-control" name="rua" id="rua">
 									<label> Nº: </label>
-									<input type="text" disabled class="form-control" name="numeroCasa" id="numeroCasa">									
+									<input type="text" class="form-control" name="numeroCasa" id="numeroCasa">									
 									<label> Bairro: </label>
-									<input type="text" disabled class="form-control" name="bairro" id="bairro">		
-									<label> Qual a deficiência?: </label>
-									<input type="text" disabled class="form-control" name="tipoDeficiencia" id="tipoDeficiencia">								
-									<label >Atestado Médico</label>
+									<input type="text" class="form-control" name="bairro" id="bairro">									
+									<label >Carteira do Idoso:</label>
 									<br>
-									<button class="btn" name="atestadoMedico" id="atestadoMedico">
+									<button class="btn" id="carteiraIdoso" name="carteiraIdoso">
+										<i class="fa fa-download" style="color:black"></i>
+										<label style="color:black">
+											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
+											download="a">Download </a>
+										</label>
+									</button>
+									<br>
+									<label >Comprovante de Residência:</label>
+									<br>
+									<button class="btn" name="comprovanteResidencia" id="comprovanteResidencia">
 										<i class="fa fa-download" style="color:black"></i>
 										<label style="color:black">
 											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
