--- a/application/views/scripts/beneficio/index.phtml
+++ b/application/views/scripts/beneficio/index.phtml
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
 
 <div class="container fundo">
@@ -12,17 +17,17 @@
 					 <table class="table">
 						<tbody class="Active">
 						  <tr>
-							<td><a href="<?= $this->baseUrl("categoriapassageiro/estudante")?>" class="btn btn-block btn-primary" id="estudante"> 
+							<td><a href="<?= $this->baseUrl("beneficio/estudante")?>" class="btn btn-block btn-primary" id="estudante"> 
 								<i class="fas fa-user-graduate"></i> Estudante
 							</a></td>
 						  </tr>
 						  <tr>
-							<td><a href="<?= $this->baseUrl("categoriapassageiro/idoso")?>" class="btn btn-block btn-primary" id="idoso">
+							<td><a href="<?= $this->baseUrl("beneficio/idoso")?>" class="btn btn-block btn-primary" id="idoso">
 								<i class="fas fa-hiking"></i> Pessoa Idosa
 							</a></td>
 						  </tr>
 						  <tr>
-							<td><a href="<?= $this->baseUrl("categoriapassageiro/deficiente")?>" class="btn btn-block btn-primary" id="deficiencia"> 
+							<td><a href="<?= $this->baseUrl("beneficio/deficiente")?>" class="btn btn-block btn-primary" id="deficiencia"> 
 							<i class="fas fa-wheelchair"></i> Pessoa com Deficiencia
                             </a></td>
 						  </tr>
