--- a/application/views/scripts/trajeto/index.phtml
+++ b/application/views/scripts/trajeto/index.phtml
@@ -60,8 +60,8 @@
 			<div class="col-1">
 
 				<div class="custom-control custom-switch">
-	  			<input type="checkbox" class="custom-control-input" id="customSwitches">
-	  			<label class="custom-control-label" id="label" for="customSwitches">Ativo</label>
+	  			<input type="checkbox" class="custom-control-input" checked id="customSwitches">
+	  			<label class="custom-control-label" id="label" for="customSwitches" >Ativo</label>
 				</div>
 			</div>
 			<div class="col-3">
